# rustpython

./: LICENSE  README.md
rust_module/: Cargo.toml  pyproject.toml
rust_module/rust_module/: rust_test.py
rust_module/src/: lib.rs  manager.rs  table.rs
