[package]
name = "rust_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_module"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
md-5 = "0.10.6"
pyo3 = "0.19.0"
rand = "0.8.5"
